tests/errors/literals/suffix-ambiguous.fn
---
Description: Suffix matches literals on multiple types
Expected: compile error
---

type Measure
{
    value: f32
    init{}

    literal px(value: f32)
    {
        return Measure { value: value }
    }
}

type OtherMeasure
{
    value: f32
    init{}

    literal px(value: f32)
    {
        return OtherMeasure { value: value }
    }
}

type Program
{
    fn Main -> i32
    {
        var v = 10.0px
        return 0
    }
}
